--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
     }
   </style>
   <body>
-    <div id="app"></div>
+    <div id="app">
+       <router-view></router-view>
+    </div>
     <script src="/dist/build.js"></script>
   </body>
 </html>
