deploy mock environment

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <!--<link href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">-->
     <link href="//cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link crossorigin="anonymous" href="https://assets-cdn.github.com/assets/mobile-d78c274eeb6b522fe1285d4ae04c4fda2315b988f72b81fc9fa3984b1ff42f61.css" media="all" rel="stylesheet">
     <link rel="shortcut icon" href="/src/assets/logo.png"/>
     <title>vuepro</title>
   </head>
