--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-    <meta content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0" name="viewport" />     
+    <meta http-equiv="Content-type" content="text/html, charset=utf-8" />
+    <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport" />     
     <meta content="yes" name="apple-mobile-web-app-capable" />
     <meta content="black" name="apple-mobile-web-app-status-bar-style" /> 
     <meta content="telephone=no" name="format-detection" /> 
@@ -13,9 +13,9 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <!--<link href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">-->
     <link href="//cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <link crossorigin="anonymous" href="https://assets-cdn.github.com/assets/mobile-d78c274eeb6b522fe1285d4ae04c4fda2315b988f72b81fc9fa3984b1ff42f61.css" media="all" rel="stylesheet">
+    <link href="http://www.douglasvegas.com/api/css/markdown.min.css" media="all" rel="stylesheet">
     <link rel="shortcut icon" href="/src/assets/logo.png"/>
-    <title>Fanpian~</title>
+    <title>Record</title>
   </head>
   <style>
     body {
